Movendo plantios para aba de busca

--- a/backend/public/busca.html
+++ b/backend/public/busca.html
@@ -8,8 +8,7 @@
 </head>
 <body>
   <div id="search-container">
-    <input type="text" placeholder="Search...">
-    <button>Search</button>
+    <!-- Plantios will be dynamically generated here -->
   </div>
   <div id="apply-seedling">
     <h2>Candidate-se para Receber uma Muda de Alface</h2>
